--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.github.tc</groupId>
+    <groupId>io.github.79121262</groupId>
     <artifactId>template-json</artifactId>
     <version>1.0-SNAPSHOT</version>
 
